the filter btns don't work, i tried everything but it doesn't show the items on the screen but the console.log is correct

--- a/menu.html
+++ b/menu.html
@@ -17,10 +17,10 @@
 </div>
 
 <div class="btn-container">
-    <button id="all">All</button>
-    <button id="breakfast">breakfast</button>
-    <button id="lunch">Lunch</button>
-    <button id="dinner">Dinner</button>
+    <button type="button" data-id="all" class="filter-btn">All</button>
+    <button type="button" data-id="breakfast" class="filter-btn">Breakfast</button>
+    <button type="button" data-id="lunch" class="filter-btn">Lunch</button>
+    <button type="button" data-id="dinner" class="filter-btn">Dinner</button>
 </div>
 
 <div class="item-container">
